--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       --radius-lg: 18px;
       --radius-md: 12px;
       --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.65);
+
+      /* Emerald theme */
+      --emerald: #34d399;
+      --emerald-dark: #064e3b;
+      --emerald-glow: rgba(52, 211, 153, 0.55);
     }
 
     * {
@@ -32,7 +37,7 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background:
         radial-gradient(circle at top left, rgba(244, 180, 214, 0.18), transparent 55%),
-        radial-gradient(circle at bottom right, rgba(15, 23, 42, 0.85), #02010a 85%);
+        radial-gradient(circle at bottom right, rgba(6, 78, 59, 0.6), #02010a 85%);
       color: var(--text);
       line-height: 1.5;
     }
@@ -67,7 +72,7 @@
       position: sticky;
       top: 0;
       z-index: 20;
-      background: linear-gradient(to right, rgba(5, 4, 9, 0.95), rgba(15, 23, 42, 0.8));
+      background: linear-gradient(to right, rgba(5, 4, 9, 0.95), rgba(15, 23, 42, 0.85));
     }
 
     .brand {
@@ -85,7 +90,7 @@
       align-items: center;
       justify-content: center;
       background:
-        radial-gradient(circle at 30% 0%, rgba(244, 180, 214, 0.4), rgba(15, 23, 42, 0.95)),
+        radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.4), rgba(15, 23, 42, 0.95)),
         linear-gradient(to bottom, rgba(15, 23, 42, 0.8), #020309);
       box-shadow: 0 12px 30px rgba(0, 0, 0, 0.8);
       font-size: 1.25rem;
@@ -128,10 +133,10 @@
     }
 
     nav a.primary {
-      border-color: rgba(244, 180, 214, 0.9);
+      border-color: rgba(52, 211, 153, 0.9);
       color: var(--text);
-      background: radial-gradient(circle at 30% 0%, rgba(244, 180, 214, 0.25), rgba(88, 28, 135, 0.9));
-      box-shadow: 0 18px 40px rgba(30, 64, 175, 0.55);
+      background: radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.25), rgba(6, 78, 59, 0.95));
+      box-shadow: 0 18px 40px var(--emerald-glow);
     }
 
     /* Layout main */
@@ -155,7 +160,7 @@
     .intro-card {
       background:
         linear-gradient(to bottom right, rgba(21, 18, 28, 0.96), rgba(5, 4, 9, 0.98)),
-        radial-gradient(circle at top right, rgba(244, 180, 214, 0.22), transparent 60%);
+        radial-gradient(circle at top right, rgba(52, 211, 153, 0.22), transparent 60%);
       border-radius: var(--radius-lg);
       padding: 1.5rem 1.5rem 1.25rem;
       border: 1px solid rgba(252, 231, 243, 0.35);
@@ -169,8 +174,8 @@
       position: absolute;
       inset: -40px;
       background-image:
-        radial-gradient(circle at 10% 20%, rgba(252, 231, 243, 0.45) 0, transparent 45%),
-        radial-gradient(circle at 80% 10%, rgba(244, 180, 214, 0.3) 0, transparent 50%);
+        radial-gradient(circle at 10% 20%, rgba(52, 211, 153, 0.45) 0, transparent 45%),
+        radial-gradient(circle at 80% 10%, rgba(52, 211, 153, 0.3) 0, transparent 50%);
       opacity: 0.35;
       pointer-events: none;
     }
@@ -299,7 +304,7 @@
     .item-card:hover {
       transform: translateY(-4px);
       box-shadow: 0 18px 40px rgba(0, 0, 0, 0.7);
-      border-color: rgba(244, 180, 214, 0.85);
+      border-color: rgba(52, 211, 153, 0.85);
     }
 
     .item-image {
@@ -324,7 +329,7 @@
       font-size: 0.7rem;
       background: rgba(5, 4, 9, 0.9);
       color: var(--accent-soft);
-      border: 1px solid rgba(244, 180, 214, 0.9);
+      border: 1px solid rgba(52, 211, 153, 0.9);
       text-transform: uppercase;
       letter-spacing: 0.16em;
     }
@@ -364,7 +369,7 @@
 
     .panel {
       background:
-        radial-gradient(circle at top, rgba(15, 23, 42, 0.98), rgba(5, 4, 9, 0.96));
+        radial-gradient(circle at top, rgba(6, 78, 59, 0.98), rgba(5, 4, 9, 0.96));
       border-radius: var(--radius-lg);
       border: 1px solid rgba(148, 163, 184, 0.4);
       padding: 1.2rem 1.1rem;
@@ -410,16 +415,16 @@
 
     .button-primary {
       border-radius: 999px;
-      border: 1px solid rgba(244, 180, 214, 0.9);
+      border: 1px solid rgba(52, 211, 153, 0.9);
       padding: 0.55rem 0.9rem;
-      background: radial-gradient(circle at 30% 0%, rgba(244, 180, 214, 0.25), rgba(88, 28, 135, 0.9));
+      background: radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.25), rgba(6, 78, 59, 0.95));
       color: var(--text);
       font-size: 0.82rem;
       text-transform: uppercase;
       letter-spacing: 0.16em;
       cursor: pointer;
       margin-top: 0.3rem;
-      box-shadow: 0 14px 35px rgba(30, 64, 175, 0.7);
+      box-shadow: 0 14px 35px var(--emerald-glow);
       width: 100%;
       text-align: center;
     }
@@ -454,7 +459,7 @@
 
     .calendar-section {
       margin-top: 2.25rem;
-      background: linear-gradient(to bottom right, rgba(15, 23, 42, 0.95), rgba(30, 64, 175, 0.85));
+      background: linear-gradient(to bottom right, rgba(6, 78, 59, 0.95), rgba(6, 95, 70, 0.85));
       border-radius: var(--radius-lg);
       border: 1px solid rgba(148, 163, 184, 0.6);
       padding: 1.2rem 1.3rem 1.4rem;
