--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
 
   <style>
     :root {
-      --bg: #050409;           /* inky night */
-      --bg-alt: #0b0910;       /* deeper panels */
-      --panel: #15121c;        /* gothic plum */
-      --accent: #f4b4d6;       /* sakura pink */
-      --accent-soft: #fce7f3;  /* pale blossom */
-      --accent-dark: #111827;  /* crow charcoal */
+      /* Core Raven Queen + Emerald palette */
+      --bg: #020204;              /* void black */
+      --bg-alt: #080712;          /* dark plum shadow */
+      --panel: #101223;           /* raven-feather panel */
       --text: #f9fafb;
-      --muted: #a3a3b5;
-      --border: #383349;
+      --muted: #a8a8c7;
+      --border: #3f3750;
+
       --radius-lg: 18px;
       --radius-md: 12px;
-      --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.65);
+      --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.75);
 
-      /* Emerald theme */
+      /* Sakura pink as soft highlight */
+      --accent: #f4b4d6;        /* sakura highlight */
+      --accent-soft: #fde6f5;
+
+      /* Amethyst twilight glow */
+      --amethyst: #c4b5fd;
+      --amethyst-soft: #e5ddff;
+      --amethyst-glow: rgba(147, 51, 234, 0.35);
+
+      /* Emerald magic */
       --emerald: #34d399;
       --emerald-dark: #064e3b;
-      --emerald-glow: rgba(52, 211, 153, 0.55);
+      --emerald-glow: rgba(52, 211, 153, 0.6);
     }
 
     * {
@@ -36,8 +44,8 @@
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background:
-        radial-gradient(circle at top left, rgba(244, 180, 214, 0.18), transparent 55%),
-        radial-gradient(circle at bottom right, rgba(6, 78, 59, 0.6), #02010a 85%);
+        radial-gradient(circle at top left, var(--amethyst-glow) 0, transparent 60%),
+        radial-gradient(circle at bottom right, rgba(34, 197, 94, 0.45), #020204 85%);
       color: var(--text);
       line-height: 1.5;
     }
@@ -72,7 +80,8 @@
       position: sticky;
       top: 0;
       z-index: 20;
-      background: linear-gradient(to right, rgba(5, 4, 9, 0.95), rgba(15, 23, 42, 0.85));
+      background:
+        linear-gradient(to right, rgba(2, 6, 23, 0.96), rgba(15, 23, 42, 0.92));
     }
 
     .brand {
@@ -85,14 +94,14 @@
       width: 44px;
       height: 44px;
       border-radius: 999px;
-      border: 1px solid rgba(252, 231, 243, 0.9);
+      border: 1px solid rgba(229, 221, 255, 0.9);
       display: flex;
       align-items: center;
       justify-content: center;
       background:
-        radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.4), rgba(15, 23, 42, 0.95)),
-        linear-gradient(to bottom, rgba(15, 23, 42, 0.8), #020309);
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.8);
+        radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.4), rgba(15, 23, 42, 0.98)),
+        linear-gradient(to bottom, rgba(15, 23, 42, 0.95), #020309);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.85);
       font-size: 1.25rem;
     }
 
@@ -127,16 +136,17 @@
     }
 
     nav a:hover {
-      border-color: rgba(148, 163, 184, 0.5);
+      border-color: rgba(148, 163, 184, 0.6);
       color: var(--text);
-      background: rgba(15, 23, 42, 0.65);
+      background: rgba(15, 23, 42, 0.85);
     }
 
     nav a.primary {
-      border-color: rgba(52, 211, 153, 0.9);
+      border-color: rgba(52, 211, 153, 0.95);
       color: var(--text);
-      background: radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.25), rgba(6, 78, 59, 0.95));
-      box-shadow: 0 18px 40px var(--emerald-glow);
+      background:
+        radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.24), rgba(6, 78, 59, 0.98));
+      box-shadow: 0 18px 50px var(--emerald-glow);
     }
 
     /* Layout main */
@@ -159,11 +169,11 @@
 
     .intro-card {
       background:
-        linear-gradient(to bottom right, rgba(21, 18, 28, 0.96), rgba(5, 4, 9, 0.98)),
+        linear-gradient(to bottom right, rgba(16, 18, 35, 0.98), rgba(3, 7, 18, 0.98)),
         radial-gradient(circle at top right, rgba(52, 211, 153, 0.22), transparent 60%);
       border-radius: var(--radius-lg);
       padding: 1.5rem 1.5rem 1.25rem;
-      border: 1px solid rgba(252, 231, 243, 0.35);
+      border: 1px solid rgba(148, 163, 184, 0.45);
       box-shadow: var(--shadow-soft);
       position: relative;
       overflow: hidden;
@@ -174,9 +184,9 @@
       position: absolute;
       inset: -40px;
       background-image:
-        radial-gradient(circle at 10% 20%, rgba(52, 211, 153, 0.45) 0, transparent 45%),
+        radial-gradient(circle at 10% 20%, rgba(196, 181, 253, 0.42) 0, transparent 45%),
         radial-gradient(circle at 80% 10%, rgba(52, 211, 153, 0.3) 0, transparent 50%);
-      opacity: 0.35;
+      opacity: 0.45;
       pointer-events: none;
     }
 
@@ -187,9 +197,9 @@
       font-size: 0.75rem;
       padding: 0.25rem 0.6rem;
       border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.6);
+      border: 1px solid rgba(148, 163, 184, 0.7);
       color: var(--muted);
-      background: rgba(15, 23, 42, 0.75);
+      background: rgba(17, 24, 39, 0.9);
       backdrop-filter: blur(10px);
       margin-bottom: 0.75rem;
       position: relative;
@@ -200,8 +210,8 @@
       width: 8px;
       height: 8px;
       border-radius: 999px;
-      background: #22c55e;
-      box-shadow: 0 0 12px rgba(34, 197, 94, 0.7);
+      background: var(--emerald);
+      box-shadow: 0 0 12px var(--emerald-glow);
     }
 
     .intro-card h2 {
@@ -239,8 +249,8 @@
     .pill {
       padding: 0.25rem 0.7rem;
       border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.5);
-      background: rgba(15, 23, 42, 0.85);
+      border: 1px solid rgba(148, 163, 184, 0.6);
+      background: rgba(15, 23, 42, 0.9);
     }
 
     .intro-footer {
@@ -291,20 +301,20 @@
     }
 
     .item-card {
-      background: rgba(15, 23, 42, 0.95);
+      background: rgba(15, 23, 42, 0.97);
       border-radius: var(--radius-md);
-      border: 1px solid rgba(148, 163, 184, 0.4);
+      border: 1px solid rgba(63, 55, 80, 0.85);
       overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.55);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
       cursor: pointer;
-      transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, border-color 0.15s ease-out;
+      transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, border-color 0.15s ease-out, box-shadow 0.15s ease-out;
       position: relative;
     }
 
     .item-card:hover {
       transform: translateY(-4px);
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.7);
-      border-color: rgba(52, 211, 153, 0.85);
+      border-color: rgba(52, 211, 153, 0.95);
+      box-shadow: 0 20px 48px rgba(0, 0, 0, 0.9);
     }
 
     .item-image {
@@ -327,9 +337,9 @@
       padding: 0.2rem 0.55rem;
       border-radius: 999px;
       font-size: 0.7rem;
-      background: rgba(5, 4, 9, 0.9);
-      color: var(--accent-soft);
-      border: 1px solid rgba(52, 211, 153, 0.9);
+      background: rgba(2, 6, 23, 0.96);
+      color: var(--amethyst-soft);
+      border: 1px solid var(--amethyst);
       text-transform: uppercase;
       letter-spacing: 0.16em;
     }
@@ -369,9 +379,9 @@
 
     .panel {
       background:
-        radial-gradient(circle at top, rgba(6, 78, 59, 0.98), rgba(5, 4, 9, 0.96));
+        radial-gradient(circle at top, rgba(6, 78, 59, 0.96), rgba(3, 7, 18, 0.98));
       border-radius: var(--radius-lg);
-      border: 1px solid rgba(148, 163, 184, 0.4);
+      border: 1px solid rgba(63, 55, 80, 0.95);
       padding: 1.2rem 1.1rem;
       box-shadow: var(--shadow-soft);
       position: sticky;
@@ -392,9 +402,9 @@
     }
 
     .selected-item {
-      background: var(--accent-dark);
+      background: #020617;
       border-radius: var(--radius-md);
-      border: 1px solid rgba(148, 163, 184, 0.7);
+      border: 1px solid rgba(99, 102, 241, 0.8);
       padding: 0.6rem 0.7rem;
       margin-bottom: 0.9rem;
       font-size: 0.8rem;
@@ -410,35 +420,38 @@
 
     .selected-item-name {
       font-weight: 500;
-      color: var(--accent-soft);
+      color: var(--amethyst-soft);
     }
 
     .button-primary {
       border-radius: 999px;
-      border: 1px solid rgba(52, 211, 153, 0.9);
+      border: 1px solid rgba(52, 211, 153, 0.95);
       padding: 0.55rem 0.9rem;
-      background: radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.25), rgba(6, 78, 59, 0.95));
+      background:
+        radial-gradient(circle at 30% 0%, rgba(52, 211, 153, 0.24), rgba(6, 78, 59, 0.98));
       color: var(--text);
       font-size: 0.82rem;
       text-transform: uppercase;
       letter-spacing: 0.16em;
       cursor: pointer;
       margin-top: 0.3rem;
-      box-shadow: 0 14px 35px var(--emerald-glow);
+      box-shadow: 0 18px 50px var(--emerald-glow);
       width: 100%;
       text-align: center;
+      transition: transform 0.15s ease-out, filter 0.15s ease-out, box-shadow 0.15s ease-out;
     }
 
     .button-primary:hover {
-      filter: brightness(1.05);
+      filter: brightness(1.07);
       transform: translateY(-1px);
+      box-shadow: 0 22px 60px var(--emerald-glow);
     }
 
     .button-secondary {
       border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.7);
+      border: 1px solid rgba(148, 163, 184, 0.8);
       padding: 0.45rem 0.8rem;
-      background: rgba(15, 23, 42, 0.9);
+      background: rgba(15, 23, 42, 0.95);
       color: var(--muted);
       font-size: 0.76rem;
       text-transform: uppercase;
@@ -459,9 +472,11 @@
 
     .calendar-section {
       margin-top: 2.25rem;
-      background: linear-gradient(to bottom right, rgba(6, 78, 59, 0.95), rgba(6, 95, 70, 0.85));
+      background:
+        radial-gradient(circle at top left, var(--amethyst-glow), transparent 60%),
+        linear-gradient(to bottom right, rgba(10, 19, 35, 0.98), rgba(3, 7, 18, 0.98));
       border-radius: var(--radius-lg);
-      border: 1px solid rgba(148, 163, 184, 0.6);
+      border: 1px solid rgba(63, 55, 80, 0.95);
       padding: 1.2rem 1.3rem 1.4rem;
       box-shadow: var(--shadow-soft);
     }
@@ -490,7 +505,7 @@
       margin-top: 0.75rem;
       border-radius: 12px;
       overflow: hidden;
-      border: 1px solid rgba(148, 163, 184, 0.8);
+      border: 1px solid rgba(75, 85, 99, 0.95);
       background: #020617;
       min-height: 420px;
       display: flex;
