--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       overflow: hidden;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
       cursor: pointer;
-      transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, border-color 0.15s ease-out, box-shadow 0.15s ease-out;
+      transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, border-color 0.15s ease-out;
       position: relative;
     }
 
@@ -423,6 +423,52 @@
       color: var(--amethyst-soft);
     }
 
+    /* Form fields in the panel */
+
+    .form-field {
+      margin-bottom: 0.6rem;
+      font-size: 0.8rem;
+    }
+
+    .form-field label {
+      display: block;
+      margin-bottom: 0.2rem;
+      color: var(--accent-soft);
+    }
+
+    .form-field small {
+      display: block;
+      font-size: 0.7rem;
+      color: var(--muted);
+      margin-top: 0.1rem;
+    }
+
+    .form-field input,
+    .form-field select,
+    .form-field textarea {
+      width: 100%;
+      border-radius: 999px;
+      border: 1px solid rgba(148, 163, 184, 0.7);
+      background: rgba(15, 23, 42, 0.95);
+      color: var(--text);
+      padding: 0.4rem 0.7rem;
+      font-size: 0.8rem;
+      outline: none;
+    }
+
+    .form-field textarea {
+      border-radius: 12px;
+      min-height: 70px;
+      resize: vertical;
+    }
+
+    .form-field input:focus,
+    .form-field select:focus,
+    .form-field textarea:focus {
+      border-color: rgba(52, 211, 153, 0.9);
+      box-shadow: 0 0 0 1px rgba(52, 211, 153, 0.4);
+    }
+
     .button-primary {
       border-radius: 999px;
       border: 1px solid rgba(52, 211, 153, 0.95);
@@ -434,7 +480,7 @@
       text-transform: uppercase;
       letter-spacing: 0.16em;
       cursor: pointer;
-      margin-top: 0.3rem;
+      margin-top: 0.6rem;
       box-shadow: 0 18px 50px var(--emerald-glow);
       width: 100%;
       text-align: center;
@@ -809,8 +855,8 @@
       <aside class="panel" id="order">
         <h3>Ready to talk details?</h3>
         <p>
-          Tap a look in the gallery (or come with your own idea), then click below to email Kate directly
-          about your project.
+          Share your idea, event date, pick from the options below, and add any inspiration photos.
+          Kate will follow up with questions, a timeline estimate, and a custom quote.
         </p>
 
         <div class="selected-item">
@@ -818,6 +864,46 @@
           <div class="selected-item-name" id="selectedItemName">
             None selected yet – tap a piece in the gallery or email about a new idea.
           </div>
+        </div>
+
+        <div class="form-field">
+          <label for="clientName">Your name</label>
+          <input id="clientName" type="text" placeholder="Optional, but helpful">
+        </div>
+
+        <div class="form-field">
+          <label for="eventDate">Event date</label>
+          <input id="eventDate" type="date">
+          <small>If this is for a specific event, include the date.</small>
+        </div>
+
+        <div class="form-field">
+          <label for="projectType">What are you looking for?</label>
+          <select id="projectType">
+            <option value="">Select an option</option>
+            <option>Formal gown</option>
+            <option>Cosplay build</option>
+            <option>Performance wear</option>
+            <option>Lingerie or corsetry</option>
+            <option>Alterations</option>
+            <option>Other / not sure yet</option>
+          </select>
+        </div>
+
+        <div class="form-field">
+          <label for="timeline">Timeline</label>
+          <select id="timeline">
+            <option value="">Select an option</option>
+            <option>Over a month away</option>
+            <option>Under one month (rush)</option>
+            <option>Under two weeks (urgent rush)</option>
+          </select>
+        </div>
+
+        <div class="form-field">
+          <label for="ideaDetails">Tell Kate about your idea</label>
+          <textarea id="ideaDetails" placeholder="Character, colors, fabrics, vibes, or anything else you’d like to share."></textarea>
+          <small>You’ll be able to attach inspiration photos in your email app before sending.</small>
         </div>
 
         <button type="button" class="button-primary" onclick="emailKateDirectly()">
@@ -833,9 +919,8 @@
 
         <p class="small-note">
           This will open your email app with a pre-filled message to 
-          <a href="mailto:katethestitchwitch@gmail.com">katethestitchwitch@gmail.com</a>. You can edit everything
-          before sending. A 50% deposit is required to book, and rush projects may be billed at a higher hourly
-          rate depending on your deadline.
+          <a href="mailto:katethestitchwitch@gmail.com">katethestitchwitch@gmail.com</a>. 
+          You can edit everything and attach photos before sending.
         </p>
       </aside>
     </section>
@@ -934,29 +1019,51 @@
     function resetSelection() {
       selectedDesign = '';
       selectedNameEl.textContent = 'None selected yet – tap a piece in the gallery or email about a new idea.';
+      document.getElementById('clientName').value = '';
+      document.getElementById('eventDate').value = '';
+      document.getElementById('projectType').value = '';
+      document.getElementById('timeline').value = '';
+      document.getElementById('ideaDetails').value = '';
     }
 
     function emailKateDirectly() {
       const to = 'katethestitchwitch@gmail.com';
       const subject = 'New Wickedly Stitched by Kate inquiry';
 
-      let body = 'Hi Kate,\n\n';
+      const name = document.getElementById('clientName').value.trim();
+      const eventDate = document.getElementById('eventDate').value;
+      const projectType = document.getElementById('projectType').value;
+      const timeline = document.getElementById('timeline').value;
+      const ideaDetails = document.getElementById('ideaDetails').value.trim();
 
-      if (selectedDesign) {
-        body += 'I\'m interested in:\n' +
-                selectedDesign +
-                '\n\n';
-      } else {
-        body += 'I\'m interested in a custom piece and would love to talk details.\n\n';
+      let body = '';
+
+      if (name) {
+        body += 'Name: ' + name + '\n\n';
       }
 
-      body += 'Here are some details about my idea (you can edit this before sending):\n' +
-              '- Event/date:\n' +
-              '- Type of garment (gown, cosplay, performance wear, lingerie/corset, etc.):\n' +
-              '- Colors/fabrics:\n' +
-              '- Budget range:\n' +
-              '- Rush deadline? (over a month / under one month / under two weeks):\n\n' +
-              'Thank you!\n';
+      if (selectedDesign) {
+        body += 'Selected inspiration from website:\n' +
+                selectedDesign + '\n\n';
+      }
+
+      if (projectType || eventDate || timeline) {
+        body += 'Project details:\n';
+        if (projectType) body += '- Type: ' + projectType + '\n';
+        if (eventDate) body += '- Event date: ' + eventDate + '\n';
+        if (timeline) body += '- Timeline: ' + timeline + '\n';
+        body += '\n';
+      }
+
+      body += 'Idea / concept:\n';
+      if (ideaDetails) {
+        body += ideaDetails + '\n\n';
+      } else {
+        body += '(You can describe your design idea here.)\n\n';
+      }
+
+      body += 'Please attach any inspiration photos to this email before sending so Kate can see your vision.\n\n';
+      body += 'Thank you!\n';
 
       const mailtoLink =
         'mailto:' + encodeURIComponent(to) +
