--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
         </p>
       </div>
 
-      <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6%;">
+      <div style="font-size: 0.9rem; color: var(--text); line-height: 1.6;">
         <p style="margin-bottom: 1rem;">
           Katelyn “Kate the Stitch Witch” Law Sarver is the owner and designer behind Wickedly Stitched by Kate. 
           A Franklin County native with over a decade of sewing experience, Kate creates custom gowns, cosplay, 
